--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
 # Polymarket Trading Bot Configuration
 # Copy this file to .env and fill in your values
+#
+# PRODUCTION DEPLOYMENT:
+# 1. Copy this file: cp .env.example .env
+# 2. Fill in all required values (marked with REQUIRED)
+# 3. Run: docker compose up -d
+# 4. Access frontend at http://localhost:9000
+# 5. API available at http://localhost:5000
 
 # ===========================================
-# Polymarket Credentials
+# Polymarket Credentials (REQUIRED)
 # ===========================================
 # Your wallet private key (without 0x prefix)
 PRIVATE_KEY=your_wallet_private_key_here
@@ -12,14 +19,24 @@ POLYMARKET_API_KEY=your_api_key
 POLYMARKET_API_SECRET=your_api_secret
 POLYMARKET_API_PASSPHRASE=your_passphrase
 
+# Signature type: 0=EOA wallet, 1=Poly Proxy wallet, 2=Gnosis Safe
+# Use 1 if you deposited via Polymarket website (RECOMMENDED)
+SIGNATURE_TYPE=1
+
+# Funder address (your Polymarket proxy wallet address)
+# Find this on Polymarket: Settings > Your proxy wallet address
+# Required when using SIGNATURE_TYPE=1
+FUNDER_ADDRESS=your_proxy_wallet_address
+
 # ===========================================
 # Environment Settings
 # ===========================================
-# Set to true for testnet, false for mainnet
-USE_TESTNET=true
+# Set to true for testnet, false for mainnet (PRODUCTION: false)
+USE_TESTNET=false
 
 # Chain ID: 80002 for Polygon Amoy testnet, 137 for Polygon mainnet
-CHAIN_ID=80002
+# PRODUCTION: Use 137 for mainnet
+CHAIN_ID=137
 
 # ===========================================
 # Trading Parameters
@@ -27,45 +44,99 @@ CHAIN_ID=80002
 # Number of shares per trade
 ORDER_SIZE=100
 
-# Limit buy price (0.0 to 1.0)
-BUY_PRICE=0.8
-
-# Sell price after buy fills (0.0 to 1.0)
-SELL_PRICE=0.5
-
-# Maximum loss threshold - square off all positions if loss reaches this
-MAX_LOSS=0.3
-
-# Price target - sell when price hits this level
-PRICE_TARGET=0.98
-
-# Minutes before market close to start trading
+# Minutes before market close to start trading (live trading only)
 TIME_THRESHOLD=3
 
-# Paper Trading (set to true to simulate trades without real money)
-PAPER_TRADING=true
+# Maximum positions (buy-sell cycles) per market
+MAX_POSITIONS_PER_MARKET=3
+
+# ===========================================
+# Strategy Parameters
+# ===========================================
+# Entry trigger - place MARKET buy when price >= this
+TRIGGER_PRICE=0.75
+
+# Stoploss price - soft stoploss (entry_price - 0.20)
+STOPLOSS=0.55
+
+# Target price - exit when price >= this
+TARGET=0.99
+
+# Cancel unfilled orders when time to close is less than this (in minutes)
+# Default: 0.167 = 10 seconds
+ORDER_CANCEL_THRESHOLD=0.167
+
+# Safety thresholds (hardcoded in strategy):
+# - NO BUYING when <= 10 seconds to expiry (prevents entering too close to settlement)
+# - FORCE SELL all positions when <= 5 seconds to expiry (ensures clean exit)
+
+# ===========================================
+# Fees
+# ===========================================
+# Taker fee rate (0.001 = 0.10% = 10 basis points)
+TAKER_FEE_RATE=0.001
+
+# Minimum taker fee in dollars
+MIN_TAKER_FEE=0.001
+
+# ===========================================
+# Paper Trading
+# ===========================================
+# Set to true to simulate trades without real money
+# PRODUCTION: Set to false for live trading
+PAPER_TRADING=false
+
+# Starting balance for paper trading
 PAPER_BALANCE=1000.0
 
 # ===========================================
 # Database
 # ===========================================
 # SQLite database URL (relative to app directory)
+# Data is persisted in Docker volume: polymarket-bot-data
 DATABASE_URL=sqlite+aiosqlite:///./data/trades.db
 
 # ===========================================
-# API Server
+# API Server (Backend)
 # ===========================================
+# Host to bind to (0.0.0.0 for Docker)
 API_HOST=0.0.0.0
+
+# Backend internal port (inside container)
 API_PORT=5000
 
 # ===========================================
-# Docker Deployment
+# Docker Deployment Ports
 # ===========================================
-# Port mappings for Docker (host ports)
+# Backend port (host:container) - API accessible at http://localhost:5000
+BACKEND_PORT=5000
+
+# Frontend port (host:container) - Dashboard accessible at http://localhost:9000
 FRONTEND_PORT=9000
 
 # ===========================================
 # Logging
 # ===========================================
 # Set to DEBUG for detailed logs (DEBUG, INFO, WARNING, ERROR)
+# PRODUCTION: Use INFO or WARNING
 LOG_LEVEL=INFO
+
+# ===========================================
+# Production Settings (Optional)
+# ===========================================
+# Domain for SSL/HTTPS (if using Traefik)
+# DOMAIN=polymarket.yourdomain.com
+
+# Email for Let's Encrypt SSL certificates
+# ACME_EMAIL=your-email@example.com
+
+# ===========================================
+# Legacy Parameters (kept for backwards compatibility)
+# ===========================================
+# These are superseded by the Strategy Parameters above
+ENTRY_MIN=0.78
+ENTRY_MAX=0.80
+BUY_PRICE=0.8
+SELL_PRICE=0.5
+MAX_LOSS=0.3
+PRICE_TARGET=0.98
