--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: polymarket-bot-backend:latest
     container_name: polymarket-bot-backend
     ports:
-      - "${API_PORT:-5000}:5000"
+      - "${BACKEND_PORT:-5000}:5000"
     env_file:
       - .env
     environment:
