--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -41,6 +41,20 @@ server {
         proxy_set_header Host $host;
     }
 
+    # WebSocket support for real-time price updates
+    location /ws {
+        proxy_pass http://backend:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 86400;
+        proxy_send_timeout 86400;
+    }
+
     # Handle SPA routing
     location / {
         try_files $uri $uri/ /index.html;
