added re-enter logic

--- a/.env.example
+++ b/.env.example
@@ -66,6 +66,10 @@ TARGET=0.99
 # Default: 0.167 = 10 seconds
 ORDER_CANCEL_THRESHOLD=0.167
 
+# Maximum price for re-entry after a position is closed
+# Skip re-entry if price > this value (prevents buying at high prices after closing)
+REENTRY_MAX_PRICE=0.9
+
 # Safety thresholds (hardcoded in strategy):
 # - NO BUYING when <= 10 seconds to expiry (prevents entering too close to settlement)
 # - FORCE SELL all positions when <= 5 seconds to expiry (ensures clean exit)
@@ -140,3 +144,4 @@ BUY_PRICE=0.8
 SELL_PRICE=0.5
 MAX_LOSS=0.3
 PRICE_TARGET=0.98
+REENTRY_MAX_PRICE=0.9
